<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>training_and_examples</name>
  <version>0.1.0</version>
  <description>My ROS2 study and example package</description>
  <maintainer email="r.millennianno@gmail.com">rizkymille</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- building with c++ -->
  <buildtool_depend>ament_cmake_python</buildtool_depend> <!-- building with python -->

  <depend>std_msgs</depend>
  <depend>example_infs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
